--- a/app/assets/stylesheets/src/critical.css
+++ b/app/assets/stylesheets/src/critical.css
@@ -56,6 +56,10 @@ body {
   margin: 0;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  color: var(--text-main) !important;
+}
+
 /* Critical layout containers */
 .bg-light {
   background-color: var(--bg-body) !important;
